--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -5,3 +5,10 @@
 </p>
 
 <button class="btn btn-primary" {{action 'showRealName'}}>Click here to learn Dracula's real name!</button>
+
+{{#if isPictureShowing}}
+<button class="btn btn-primary" {{action 'hidePicture'}}>Hide that scary face</button>
+<p><img src="http://upload.wikimedia.org/wikipedia/en/2/29/Count_von_Count_kneeling.png" alt="A Photo of Dracula"></p>
+{{else}}
+  <button class="btn btn-info" {{action 'showPicture'}}>Click here to see a picture</button>
+{{/if}}
