--- a/templates/contact.hbs
+++ b/templates/contact.hbs
@@ -8,8 +8,11 @@
       <li>{{#link-to 'email'}}Email{{/link-to}}</li>
     </ul>
 
-    <p>Or, <a href="#" {{action 'sendMessage'}}>click here</a> to send a secret message.</p>
-
+    {{#if messageSent}}
+      <p>Thank you. Your message has been sent.</p>
+    {{else}}
+      <p>Or, <a href="#" {{action 'sendMessage'}}>click here</a> to send a secret message.</p>
+      {{/if}}
   </div>
 
   <div class="col-md-6">
