--- a/templates/contact.hbs
+++ b/templates/contact.hbs
@@ -9,7 +9,7 @@
     </ul>
 
     {{#if messageSent}}
-      <p>Thank you. Your message has been sent.</p>
+      <p>Thank you. Your message has been sent. Your confirmation number is {{confirmationNumber}}.</p>
     {{else}}
       <p>Or, <a href="#" {{action 'sendMessage'}}>click here</a> to send a secret message.</p>
       {{/if}}
