--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -7,3 +7,5 @@
 </ul>
 
 <p><a href="#" {{action 'sortByTitle'}}>Sort By Title</a></p>
+
+<p>{{#link-to 'new-post' classNames="btn btn-primary"}}New scary post{{/link-to}}</p>
